src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__interaction_terminator__terminator_idle_success.snap
---
source: src/tui/snapshot_tests/interaction_terminator.rs
expression: terminal.backend()
---
"┌─ agent agent  ·  model default  ·  #42 ──────────────────────────────────────────────────────────────────────────────┐"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ╭─ sys · HH:MM ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ PR #7 created → finishing session and wiping worktree…                                                             │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
" ╭─ sys · HH:MM ──────────────────────────────────────────────────────────────────────────────────────────────────────╮ "
" │ worktree removed at /tmp/maestro/issue-42; branch feat/issue-42 deleted                                            │ "
" ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"─ [Enter] Send  [Shift+Enter] Newline  [Ctrl+P] /pushup (off)  [Ctrl+L] Clear input  [Ctrl+W] Quit  [Esc] Back  [Up/Dn/P"
"╔════════════════════════════════════════════════════[ Terminated ]════════════════════════════════════════════════════╗"
"║                          Session terminated (PR created). Press any key to return to Issues.                         ║"
"║                                                                                                                      ║"
"║                                                                                                                      ║"
"╚══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝"
